--- a/mypro/templates/index.html
+++ b/mypro/templates/index.html
@@ -9,8 +9,16 @@
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
 </head>
 <body class="body">
+    
     <div class="box">
     <div class="box1">
+    {% if data1 %}
+    <form action="{% url 'edit_g' data1.id %}" method="post">
+        {% csrf_token %}
+        <input type="text" name="todo" value="{{data1.title}}" placeholder="Edit your task">
+        <input type="submit" value="save changes">
+    </form>
+    {% else %}
      <form action="{% url 'index' %}" method="post">
         {% csrf_token %}
     <div>
@@ -21,10 +29,12 @@
     </div>
 </form>
 <div class="box2">
+    {% endif %}
     {% for i in feeds %}
     <div>
         <span>{{i.title}}</span>
         <a href="{% url 'deletion' i.id %}"><button>Delete</button></a>
+        <a href="{% url 'edit_g' i.id %}"><button>Edit</button></a>
     </div>
     {% endfor %}
 <div>
