--- a/master/mypro/templates/getusername.html
+++ b/master/mypro/templates/getusername.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>welcome</h1>
+    <form action="" method="post">
+        {% csrf_token %}
+        <input type="text" name="username" id="" placeholder="username">
+        <input type="submit" value="submit">
+    </form>
 </body>
 </html>
