--- a/master/mypro/templates/index.html
+++ b/master/mypro/templates/index.html
@@ -1,24 +1,12 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'style.css' %}"/>
-    <title>Mail App</title>
+    <title>Document</title>
 </head>
 <body>
-    <div>
-        <h1>Django Mail App</h1>
-
-        <form method="post">
-            {% csrf_token %}
-            <input type="text" name="username" id="">
-            <input type="password" name="password" id="">
-            <input type="submit" value="submit">
-        </form>
-        <p>{{ result }}</p>
-    </div>
-  
+   <h1>welcome</h1>
+   <a href="{% url 'logout' %}">logout</a>
 </body>
 </html>
