--- a/master/mypro/templates/otp.html
+++ b/master/mypro/templates/otp.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <form action="" method="post">
-        <input type="number" name="otp" id="">
+        {% csrf_token %}
+        <input type="number" name="otp" id="" placeholder="otp">
+        <input type="submit" value="submit">
     </form>
 </body>
 </html>
