--- a/master/mypro/templates/passwordreset.html
+++ b/master/mypro/templates/passwordreset.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <form action="" method="post">
+        {% csrf_token %}
         <input type="password" placeholder="password" name="password">
         <input type="password" name="confpassword" id="" placeholder="confirmpassword">
         <input type="submit" value="submit">
