--- a/master/mypro/templates/register.html
+++ b/master/mypro/templates/register.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <form action="" method="post">
+        {% csrf_token %}
         <input type="text" name="username" id="" placeholder="username">
         <input type="email" name="email" placeholder="email">
         <input type="password" name="password" id="" placeholder="password">
